@@ -13,18 +13,29 @@ XSetClipMask(Display *display, GC gc, Pixmap mask)
 {
 	GR_REGION_ID	r;
 	GR_WINDOW_INFO	info;
+	static GR_GC_ID	last_gc = 0;
+	static GR_REGION_ID last_region = 0;
 
+printf("XSetClipMask %d\n", (int)mask);
 	if (mask == None) {
 		GrSetGCRegion(gc->gid, 0);
 		return 1;
 	}
 
-printf("XSetClipMask %d\n", mask);
+	/* avoid memory leak by deleting last region before new alloc*/
+	if (last_gc == gc->gid && last_region != 0) {
+		/* FIXME should keep last region in GC struct private data*/
+		GrDestroyRegion(last_region);
+		last_region = 0;
+	}
+
 	GrGetWindowInfo(mask, &info);
 	r = GrNewRegionFromPixmap(mask, 0, 0, info.width, info.height);
 	GrSetGCRegion(gc->gid, r);
 
-	/*GrDestroyRegion(r);*/	/* FIXME: LEAK: can't destroy region here...*/
+	last_gc = gc->gid;
+	last_region = r;
+	/*GrDestroyRegion(r);*/		/* can't destroy region here...*/
 	return 1;
 }
 
@@ -33,6 +44,8 @@ XSetClipRectangles(Display *display, GC gc, int clip_x_origin, int clip_y_origin
 	XRectangle *rectangles, int n, int ordering)
 {
 	GR_REGION_ID	r;
+	static GR_GC_ID	last_gc = 0;
+	static GR_REGION_ID last_region = 0;
 
 	GrSetGCClipOrigin(gc->gid, clip_x_origin, clip_y_origin);
 
@@ -40,6 +53,13 @@ XSetClipRectangles(Display *display, GC gc, int clip_x_origin, int clip_y_origin
 		/* FIXME need to disable all output here...*/
 		printf("XSetClipRectangles called with n=0\n");
 		return 1;
+	}
+
+	/* avoid memory leak by deleting last region before new alloc*/
+	if (last_gc == gc->gid && last_region != 0) {
+		/* FIXME should keep last region in GC struct private data*/
+		GrDestroyRegion(last_region);
+		last_region = 0;
 	}
 
 	r = GrNewRegion();
@@ -54,6 +74,9 @@ XSetClipRectangles(Display *display, GC gc, int clip_x_origin, int clip_y_origin
 		++rectangles;
 	}
 	GrSetGCRegion(gc->gid, r);
-	/*GrDestroyRegion(r);*/	/* FIXME: LEAK: can't destroy region here...*/
+
+	last_gc = gc->gid;
+	last_region = r;
+	/*GrDestroyRegion(r);*/		/* can't destroy region here...*/
 	return 1;
 }
